<resources>
    <string name="app_name">Timetable</string>
    <string name="create_subject_activity_title">Create subject</string>
    <string name="menu_settings">Settings</string>
    <string name="settings_activity_title">Settings</string>
    <string name="settings_notifications_title">Notifications</string>
    <string name="reset_timetable_settings_title">Reset timetable</string>
    <string name="weekend_days_settings_title">Weekend days</string>
    <string name="rate_app_settings_title">Rate app on the PlayStore!</string>
    <string name="reset_table_dialog_title">Reset Timetable</string>
    <string name="reset_table_dialog_message">This will remove all of your data! \n are u sure?</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="off">Off</string>
    <string name="instant">Instant</string>
    <string name="custom">Custom</string>
    <string name="edit_item_title">Edit</string>
    <string name="delete_item_title">Delete</string>
    <string name="create_subject_toolbar_title">Create subject</string>
    <string name="subject_editText_hint">Subject</string>
    <string name="info_editText_hint">Info</string>
</resources>
